--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@ body {
     width: 40%;
     height: 100%;
     position: relative;
+    text-align: center;
+    color: white;
 }
 
 .content-container {
@@ -29,4 +31,13 @@ body {
 
 img {
     height: 100%;
+}
+
+.logo {
+    color: white;
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    font-family: "RockAway";
+    font-size: 50px;
 }
