--- a/styles.css
+++ b/styles.css
@@ -34,10 +34,17 @@ img {
 }
 
 .logo {
-    color: white;
     position: absolute;
     top: 100px;
     left: 25px;
     font-family: "Lodeh";
-    font-size: 70px;
+    font-size: 65px;
+}
+
+.alt {
+    font-family: sans-serif;
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
+    font-size: 8px;
 }
