--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,18 @@ img {
 }
 
 .desc-container {
-    width: 60%;
+    width: 80%;
     font-family: "Gotham";
-    font-size: 25px;
-    padding: 120px 30px 5px 30px;
+    font-size: 18px;
+    padding: 60px 30px 5px 60px;
     height: 35%;
+}
+
+.text-q {
+    font-size: 30px;
+}
+
+li {
+    margin: 10px;
+    list-style-type: none;
 }
