--- a/styles.css
+++ b/styles.css
@@ -70,8 +70,9 @@ img {
     width: 80%;
     font-family: "Raleway";
     font-size: 18px;
-    padding: 60px 30px 5px 60px;
+    padding: 60px 0px 5px 60px ;
     height: 35%;
+    margin: 0;
 }
 
 .desc-container div {
@@ -81,6 +82,7 @@ img {
 .text-q {
     font-size: 35px;
     font-family: "RalewayBoldItalic";
+    color: rgb(27, 105, 27);
 }
 
 .text-body {
@@ -91,4 +93,65 @@ li {
     margin: 10px;
     list-style-type: none;
     font-family: "RalewayLight";
+    color: forestgreen;
+}
+
+.form-container {
+    height: 30%;
+    padding: 60px;
+    width: 60%;
+}
+
+.form-title {
+    font-size: 30px;
+    margin-bottom: 20px;
+    font-family: "Raleway";
+    
+}
+
+.input-group {
+    display: flex;
+    gap: 30px;
+}
+
+form {
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+    font-family: "Raleway";
+    color: rgb(27, 109, 27);
+}
+
+form div {
+    height: 100%;
+}
+
+.input {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+input {
+    border: 2px solid #E5E7EB;
+    border-radius: 6px;
+    height: 20px;
+}
+
+button {
+    height: 40px;
+    border: none;
+    border-radius: 8px;
+    font-family: "Raleway";
+    width: 25%;
+    background-color: rgba(12, 75, 12, 0.71);
+    color: black;
+    font-size: 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.promo-container {
+    font-size: 20px;
+    font-family: "Raleway";
+    padding: 40px 0px 0px 60px;
 }
