--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,6 @@
 }
 
 body {
-    height: 100dvh;
     padding: 0;
     margin: 0;
     display: flex;
@@ -32,7 +31,7 @@ body {
 
 .sidebar {
     width: 40%;
-    height: 100%;
+    height: 100vh;
     text-align: center;
     color: white;
     flex: 1;
@@ -41,13 +40,13 @@ body {
 .content-container {
     width: 60%;
     background-color: rgba(255, 255, 255, 0.838);
-    flex-shrink: 0;
     display: flex;
     flex-direction: column;
 }
 
 img {
-    height: 100%;
+    height: 100vh;
+    width: 100%;
 }
 
 .logo {
