--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@
     src: url(./fonts/Raleway-Light.ttf);
 }
 
+html {
+    font-size: 12px;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -52,10 +56,10 @@ img {
 
 .logo {
     position: absolute;
-    top: 100px;
-    left: 25px;
+    top: 6rem;
+    left: 2rem;
     font-family: "Lodeh";
-    font-size: 65px;
+    font-size: 3.5rem;
 }
 
 .alt {
@@ -69,17 +73,16 @@ img {
 .desc-container {
     width: 80%;
     font-family: "Raleway";
-    font-size: 18px;
-    padding: 60px 0px 5px 60px ;
+    padding: 2rem 0px 5px 2rem ;
     margin: 0;
 }
 
 .desc-container div {
-    margin: 10px;
+    margin: 1rem 0 1rem 0;
 }
 
 .text-q {
-    font-size: 35px;
+    font-size: 2rem;
     font-family: "RalewayBoldItalic";
     color: rgb(27, 105, 27);
 }
@@ -96,25 +99,25 @@ li {
 }
 
 .form-container {
-    padding: 60px;
+    padding: 1rem 0 1rem 2rem;
     width: 60%;
-}
+} 
 
 .form-title {
-    font-size: 30px;
-    margin-bottom: 20px;
+    font-size: 1rem;
+    margin-bottom: 1rem;
     font-family: "Raleway";
     
 }
 
 .input-group {
     display: flex;
-    gap: 30px;
+    gap: 1rem;
 }
 
 form {
     display: flex;
-    gap: 30px;
+    gap: 1rem;
     flex-direction: column;
     font-family: "Raleway";
     color: rgb(27, 109, 27);
@@ -146,12 +149,13 @@ button {
     color: black;
     font-size: 15px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    color: white;
 }
 
 .promo-container {
-    font-size: 20px;
+    font-size: 1.2rem;
     font-family: "Raleway";
-    padding-left: 60px;
+    padding-left: 2rem;
 }
 
 input:focus {
